# lev

./: .env.example  .gitignore  Dockerfile  README.md  main.py  overview.txt  pyproject.toml  requirements.txt  test_supabase_connection.py
backend/: api.py  supabase_utils.py
core/: data_ingestion_pipeline.py  retrieval_pipeline.py
frontend/: app.py  test.py
processed_data/: metadata.json
protocols_data/: Acarbose.txt  Aerobic-training.txt  Aged-garlic-kyolic.txt  Air-pollution.txt  Alcohol.txt  Apple-cider-vinegar.txt  Appropriate-hydration.txt  Ashwagandha.txt  Balance-training.txt  Botox-in-vascular-and-sexual-function-therapy.txt  Caloric-restriction-10.txt  Chronic-dehydration.txt  Chronic-emotion-suppression.txt  Chronic-lack-of-rest-and-relaxation.txt  Chronic-micronutrient-deficiency.txt  Chronic-psychological-stress.txt  Coffee.txt  Cold-plunge.txt  Collagen-peptides-oral.txt  Collagen.txt  Consistent-sleep-and-wake-time-incl-weekends.txt  Creatine.txt  Cryotherapy.txt  Darkness-in-the-bedroom.txt  Early-time-restricted-feeding-etrf.txt  Eating-in-a-hurry.txt  Eating-right-before-bed.txt  Epitalon-and-thymulin-injectable-peptides.txt  Evening-blue-light-exposure.txt  Evening-calming-ritual-3060-min.txt  Excess-high-glycemic-food-intake.txt  Excessive-caffeine-intake.txt  Excessive-porn-consumption.txt  Excessive-red-meat-consumption.txt  Excessive-salt-intake.txt  Excessive-social-media-use.txt  Excessive-sugar-intake.txt  Excessive-trans-fat-intake.txt  Excessive-uv-exposure.txt  Extreme-diet-monotony.txt  (+76 more)
